--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1951258756738128"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
